--- a/factory/js/package.json
+++ b/factory/js/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "gulp": "^4.0.2",
+    "jsdom": "^16.0.1",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
   }
