Refactor api connector requests and clean up factory

--- a/factory/js/package.json
+++ b/factory/js/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "koppelbot",
+  "name": "xyz",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "source/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
