--- a/factory/js/package.json
+++ b/factory/js/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "source/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "sh ../test.sh",
+    "build": "sh ../build.sh"
   },
   "keywords": [],
   "author": "",
